# TourneyTracker

./: .env  Cargo.toml  README.md  Rocket.toml  docker-compose.yml  registerTeamFailure.html.hbs  registerTeamSuccess.html.hbs  registerTournamentFail.html.hbs  registerTournamentSuccess.html.hbs
css/: showGame.css
migrations/2020-11-17-162316_tournaments/: up.sql
migrations/2020-11-17-162322_games/: up.sql
migrations/2020-11-17-162327_teams/: up.sql
migrations/2020-11-17-162334_players/: up.sql
migrations/2020-11-29-181855_tournaments_teams/: down.sql  up.sql
scripts/: index.js  showGame.js  showTournament.js  util.js
src/: display.rs  error.rs  main.rs  register.rs  schema.rs  show.rs  update.rs
src/db/: game_level.rs  mod.rs
src/tournaments/: mod.rs
templates/: index.html.hbs  register.html.hbs  registerTeam.html.hbs  registerTeamSuccess.html.hbs  registerTournament.html.hbs  registerTournamentFail.html.hbs  registerTournamentFailure.html.hbs  registerTournamentSuccess.html.hbs  showGame.html.hbs  showTeam.html.hbs  showTournament.html.hbs
