[package]
name = "tourney-tracker"
version = "0.1.0"
authors = ["emendel"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
handlebars = "3.5.1"
serde = "1.0.117"

[dependencies.rocket_contrib]
version = "0.4.6"
default-features = false
features = ["handlebars_templates"]
