[package]
name = "tourney-tracker"
version = "0.1.0"
authors = ["emendel"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
handlebars = "3.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "1.4.5", features = [ "mysql" ] }
dotenv = "0.15.0"

[dependencies.rocket_contrib]
version = "0.4.6"
default-features = false
features = ["handlebars_templates"]
